Done Deposit modal

--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -754,7 +754,7 @@ h6.conform_text {
 
   // Tabs
   .tabs {
-    display: block;
+    display: flex;
     width: 100%;
 
     .tab_buttons {
@@ -1706,6 +1706,39 @@ button.exchage_btn {
       a {
         height: 2rem;
         color: var(--color_white);
+      }
+    }
+  }
+}
+
+
+.activebalace_modalTab {
+  border-bottom: none;
+
+  li {
+    width: 50%;
+    padding: 0.5rem;
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.3rem;
+      height: auto;
+      min-height: auto;
+      padding: 1rem 2rem;
+      border-radius: 0.6rem;
+      color: var(--color_secondary);
+      background-color: var(--color_grey);
+      text-transform: capitalize;
+      width: 100%;
+      border: none !important;
+
+      &.active {
+        background: var(--color_gradientprimary) !important;
+        background-color: transparent !important;
+        color: var(--color_white) !important;
+        font-weight: 600 !important;
       }
     }
   }
