--- a/css/earn/earn.css
+++ b/css/earn/earn.css
@@ -7,49 +7,33 @@
   background-color: var(--color_white);
   border: 1px solid var(--border_color);
 }
-
 .earn_card .earn_card_header {
   padding: 1rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .earn_card .earn_card_header .symbol_icon {
   height: 4rem;
   width: 4rem;
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   padding: 0.6rem;
 }
-
 .earn_card .earn_card_header .symbol_icon img {
   height: 100%;
   width: 100%;
 }
-
 .earn_card .earn_card_header span {
   font-size: 1.6rem;
   color: var(--color_dark);
   font-weight: 600;
   text-transform: uppercase;
 }
-
 .earn_card .earn_card_body {
   margin-top: 2rem;
 }
-
 .earn_card .earn_card_body .redeem_box {
   display: block;
   margin-bottom: 1.5rem;
@@ -57,41 +41,34 @@
   border-radius: 0.8rem;
   padding: 1.2rem;
 }
-
 .earn_card .earn_card_body .redeem_box .earn_day {
   display: block;
 }
-
 .earn_card .earn_card_body .redeem_box .earn_day p {
   font-size: 1.4rem;
   color: var(--color_primary);
   font-weight: 600;
   margin-bottom: 0;
 }
-
 .earn_card .earn_card_body .redeem_box .earn_day span {
   font-size: 1.1rem;
   color: var(--color_secondary);
   margin-bottom: 0;
 }
-
 .earn_card .earn_card_body .redeem_box .upto_day {
   text-align: right;
 }
-
 .earn_card .earn_card_body .redeem_box .upto_day span {
   font-size: 1.1rem;
   font-weight: 500;
   color: var(--color_secondary);
 }
-
 .earn_card .earn_card_body .redeem_box .upto_day p {
   font-size: 2rem;
   font-weight: 600;
   color: var(--color_primary);
   margin-bottom: 0;
 }
-
 .earn_card .earn_card_body .redeem_box .upto_day svg {
   height: 1.5rem;
   color: var(--color_primary);
@@ -103,7 +80,6 @@
   border-radius: 0.6rem;
   overflow: hidden;
 }
-
 .about_earn .about_title {
   font-size: 1.6rem;
   font-weight: 600;
@@ -112,7 +88,6 @@
   border-bottom: 1px solid var(--color_grey);
   background-color: var(--color_lightprimary);
 }
-
 .about_earn .about_desc {
   padding: 1.5rem 2rem;
   font-size: 1.3rem;
@@ -127,7 +102,6 @@
   text-align: center;
   height: 100%;
 }
-
 .earn_validate svg {
   height: 5rem;
   width: 5rem;
@@ -138,7 +112,6 @@
   border-radius: 50%;
   background-color: var(--color_grey);
 }
-
 @media screen and (max-width: 767px) {
   .earn_validate svg {
     height: 4rem;
@@ -146,13 +119,11 @@
     padding: 0.8rem;
   }
 }
-
 .earn_validate p {
   margin-top: 1rem;
   font-size: 1.4rem;
   color: var(--color_secondary);
 }
-
 @media screen and (max-width: 767px) {
   .earn_validate {
     padding: 1rem 1rem;
@@ -168,7 +139,6 @@
   text-align: center;
   height: 100%;
 }
-
 .earn_box .earn_icon {
   height: 8rem;
   width: 8rem;
@@ -177,13 +147,11 @@
   background-color: var(--color_lightprimary);
   border-radius: 50%;
 }
-
 .earn_box .earn_icon svg {
   height: 100%;
   width: 100%;
   color: var(--color_primary);
 }
-
 @media screen and (max-width: 767px) {
   .earn_box .earn_icon {
     height: 6rem;
@@ -191,39 +159,33 @@
     padding: 1.5rem;
   }
 }
-
 .earn_box h5.step {
   font-size: 2.4rem;
   font-weight: 500;
   color: var(--color_dark);
 }
-
 @media screen and (max-width: 767px) {
   .earn_box h5.step {
     font-size: 2rem;
   }
 }
-
 .earn_box h4.earn_title {
   font-size: 2rem;
   color: var(--color_primary);
   font-weight: 600;
   margin-top: 1rem;
 }
-
 @media screen and (max-width: 767px) {
   .earn_box h4.earn_title {
     font-size: 1.8rem;
   }
 }
-
 .earn_box p.earn_desc {
   font-size: 1.4rem;
   color: var(--color_secondary);
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-
 @media screen and (max-width: 767px) {
   .earn_box {
     padding: 1.5rem;
@@ -233,56 +195,38 @@
 .stake_list {
   margin-top: 2rem;
 }
-
 .stake_list li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
-
 .stake_list li p {
   font-size: 1.4rem;
   color: var(--color_secondary);
 }
-
 .stake_list li span {
   font-size: 1.5rem;
   color: var(--color_dark);
   position: relative;
 }
-
 .stake_list li span div.tool {
   font-size: 1.4rem;
   background-color: var(--color_primary);
   height: 1.8rem;
   width: 1.8rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   color: var(--color_white);
   border-radius: 50%;
   padding: 0.6rem;
   cursor: pointer;
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   right: 0.5rem;
   z-index: 2;
 }
-
 .stake_list li input {
   text-align: right;
   max-width: 10rem;
@@ -292,31 +236,22 @@
   border-radius: 0.5rem;
   border: 1px solid var(--border_color);
 }
-
 .stake_list li .form-check {
   font-size: 1.4rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .stake_list li .form-check input.form-check-input {
   height: 2rem;
   width: 2rem;
   padding: 1rem !important;
   margin-right: 1rem;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
-
 .stake_list li .form-check input.form-check-input:checked {
   background-color: var(--color_primary);
   border-color: var(--color_primary);
 }
-
 .stake_list li .qa_icon {
   height: 3.5rem;
   width: 3.5rem;
@@ -325,23 +260,15 @@
   padding: 0.6rem;
   font-size: 2rem;
   color: var(--color_primary);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   font-weight: 600;
 }
-
 .stake_list li a.link_other {
   font-size: 1.4rem;
   color: var(--color_primary);
   margin-left: 1rem;
   text-decoration: underline;
   width: calc(100% - 3.5rem);
-}
-/*# sourceMappingURL=earn.css.map */
+}/*# sourceMappingURL=earn.css.map */
