--- a/css/sidebar/sidebar.css
+++ b/css/sidebar/sidebar.css
@@ -5,7 +5,6 @@
   background-color: var(--color_white);
   border-right: 1px solid var(border_color);
 }
-
 .sidebar_menu .logo {
   margin-bottom: 2rem;
   height: auto;
@@ -17,7 +16,6 @@
   border-bottom: 1px solid var(--border_color);
   text-align: center;
 }
-
 .sidebar_menu .logo svg,
 .sidebar_menu .logo img {
   fill: var(--color_primary);
@@ -26,49 +24,35 @@
   margin: 0 auto;
   display: block;
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu .logo {
     display: none;
   }
 }
-
 .sidebar_menu .logo_big {
   max-width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   height: 7rem;
   border-bottom: 1px solid var(--border_color);
   padding: 2rem 1.5rem;
 }
-
 .sidebar_menu .logo_big img {
   max-width: 100%;
   max-height: 100%;
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu .logo_big {
     display: none;
   }
 }
-
 .sidebar_menu .grid-content {
-  display: -ms-grid;
   display: grid;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
+  align-content: space-between;
   max-height: calc(100vh - 8rem);
   min-height: calc(100vh - 8rem);
 }
-
 .sidebar_menu ul.menu {
   padding: 0;
   margin-top: 2rem;
@@ -77,23 +61,19 @@
   height: 100%;
   position: relative;
 }
-
 .sidebar_menu ul.menu.bottom {
   display: block;
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu ul.menu.bottom {
     display: none;
   }
 }
-
 .sidebar_menu ul.menu li.menu_item {
   width: 100%;
   padding: 0;
   padding: 0.6rem 0.6rem 0.6rem 0.6rem;
 }
-
 .sidebar_menu ul.menu li.menu_item a {
   padding: 0.8rem;
   font-size: 1.5rem;
@@ -105,29 +85,20 @@
   min-width: 3.8rem;
   width: 3.8rem;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  align-items: center;
+  justify-content: left;
 }
-
 .sidebar_menu ul.menu li.menu_item a svg {
   font-size: 100%;
   margin: 0 auto;
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu ul.menu li.menu_item a svg {
     width: 100%;
     height: 1.8rem;
   }
 }
-
 .sidebar_menu ul.menu li.menu_item a span {
   font-size: 1.4rem;
   color: var(--color_dark);
@@ -135,7 +106,6 @@
   margin-left: 1.5rem;
   display: none;
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu ul.menu li.menu_item a span {
     display: inline-block;
@@ -144,18 +114,14 @@
     color: var(--color_white);
   }
 }
-
 .sidebar_menu ul.menu li.menu_item a.active {
   background: var(--color_primary);
   color: var(--color_white);
-  -webkit-box-shadow: 0 10px 10px 0 var(--shadow_primary);
-          box-shadow: 0 10px 10px 0 var(--shadow_primary);
+  box-shadow: 0 10px 10px 0 var(--shadow_primary);
 }
-
 .sidebar_menu ul.menu li.menu_item a.active span {
   color: var(--color_white);
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu ul.menu li.menu_item a {
     display: block;
@@ -168,55 +134,43 @@
     height: auto;
   }
 }
-
 .sidebar_menu ul.menu li.menu_item.user {
   padding: 1rem !important;
 }
-
 .sidebar_menu ul.menu li.menu_item.user .user_account {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 1.5rem;
   background-color: var(--color_lightprimary);
   width: 100%;
   border-radius: 1rem;
 }
-
 .sidebar_menu ul.menu li.menu_item.user .user_account .user_img {
   height: 4rem;
   width: 4rem;
   border-radius: 50%;
   display: none;
 }
-
 .sidebar_menu ul.menu li.menu_item.user .user_account .user_name {
   display: none;
   width: calc(100% - 4rem);
   padding-left: 1rem;
 }
-
 .sidebar_menu ul.menu li.menu_item.user .user_account .user_name h5 {
   font-size: 1.4rem;
   color: var(--color_dark);
   font-weight: 500;
 }
-
 .sidebar_menu ul.menu li.menu_item.user a.logout_btn {
   height: 3.5rem !important;
   width: 3.5rem !important;
   min-width: 3.5rem !important;
   background: transparent;
   border-radius: 0.5rem;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   color: var(--color_dark) !important;
   padding: 0.5rem !important;
 }
-
 .sidebar_menu ul.menu li.btn_mobile_plus button {
   min-width: 4rem;
   min-height: 4rem;
@@ -225,51 +179,38 @@
   background: var(--color_primary);
   color: var(--color_white);
   border: 3px solid var(--color_white);
-  -webkit-box-shadow: 0 -10px -10px 5px var(--shadow_primary);
-          box-shadow: 0 -10px -10px 5px var(--shadow_primary);
+  box-shadow: 0 -10px -10px 5px var(--shadow_primary);
   border-radius: 50%;
   position: absolute;
   top: -50%;
   left: 50%;
-  -webkit-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
   padding: 0.5rem;
   z-index: 25;
   margin-top: -1rem;
 }
-
 @media screen and (min-width: 992px) {
   .sidebar_menu ul.menu li.btn_mobile_plus button {
     display: none;
   }
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu ul.menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     margin-top: 0;
     overflow-y: visible;
   }
 }
-
 .sidebar_menu.open {
   max-width: 26rem;
   min-width: 26rem;
   width: 100%;
 }
-
 .sidebar_menu.open li.menu_item {
   padding-left: 0 !important;
 }
-
 .sidebar_menu.open li.menu_item a {
   height: 4.5rem !important;
   min-width: 3.8rem !important;
@@ -277,30 +218,24 @@
   padding-left: 2.6rem !important;
   border-radius: 0 3rem 3rem 0 !important;
 }
-
 .sidebar_menu.open li.menu_item a span {
   display: block !important;
 }
-
 .sidebar_menu.open li.menu_item a.active {
   background: var(--color_primary);
   background-image: radial-gradient(90deg, #0D3772, #042048);
   color: var(--color_white);
-  -webkit-box-shadow: 0 7px 12px 0 var(--color_lightprimary);
-          box-shadow: 0 7px 12px 0 var(--color_lightprimary);
+  box-shadow: 0 7px 12px 0 var(--color_lightprimary);
 }
-
 .sidebar_menu.open li.menu_item a.active span {
   color: var(--color_white);
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu.open li.menu_item a.active {
     color: var(--color_white);
     background-color: transparent;
   }
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu.open li.menu_item a {
     display: block;
@@ -311,21 +246,17 @@
     width: auto;
   }
 }
-
 .sidebar_menu.open li.menu_item.user .user_account .user_img {
   display: block !important;
 }
-
 .sidebar_menu.open li.menu_item.user .user_account .user_name {
   display: block !important;
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu.open {
     max-width: 100%;
   }
 }
-
 @media screen and (max-width: 991px) {
   .sidebar_menu {
     position: fixed;
@@ -336,12 +267,10 @@
     width: 100%;
     height: auto;
     z-index: 50;
-    -webkit-transition: 0.3s;
     transition: 0.3s;
     padding: 1rem;
     padding-top: 1.5rem;
     border-radius: 1rem 1rem 0 0;
     max-height: 8rem;
   }
-}
-/*# sourceMappingURL=sidebar.css.map */
+}/*# sourceMappingURL=sidebar.css.map */
