--- a/css/variables/variables.css
+++ b/css/variables/variables.css
@@ -104,5 +104,4 @@
 .text-right {
   text-align: right;
   display: block;
-}
-/*# sourceMappingURL=variables.css.map */
+}/*# sourceMappingURL=variables.css.map */
