--- a/css/header/header.css
+++ b/css/header/header.css
@@ -3,30 +3,25 @@
   border-bottom: 1px solid var(--border_color);
   padding: 1rem 1.5rem;
   width: 100%;
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 50;
   height: 7rem;
 }
-
 .header a.logo {
   height: 4.5rem;
   width: 4.5rem;
   display: none;
 }
-
 .header a.logo img {
   height: 100%;
   width: 100%;
 }
-
 @media screen and (max-width: 991px) {
   .header a.logo {
     display: block;
   }
 }
-
 .header button.sidebar_collapse {
   width: 3.5rem;
   height: 3.5rem;
@@ -35,25 +30,16 @@
   padding: 0.5rem;
   color: var(--color_primary);
 }
-
 @media screen and (max-width: 991px) {
   .header button.sidebar_collapse {
     display: none;
   }
 }
-
 .header .header_menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  align-items: center;
+  justify-content: right;
 }
-
 .header .header_menu .deposit_btn {
   background-color: var(--color_primary);
   padding: 0.8rem 2rem;
@@ -61,18 +47,15 @@
   color: var(--color_white);
   border-radius: 0.6rem;
 }
-
 @media screen and (max-width: 991px) {
   .header .header_menu .deposit_btn {
     padding: 0.8rem 1.2rem;
     font-size: 1.3rem;
   }
 }
-
 .header .header_menu .dropdown {
   margin: 0 0 0 1rem;
 }
-
 .header .header_menu .dropdown .btn-secondary {
   background-color: transparent;
   height: 4rem;
@@ -83,24 +66,20 @@
   padding: 0.4rem;
   background-color: var(--color_lightprimary);
 }
-
 .header .header_menu .dropdown .btn-secondary svg {
   color: var(--color_dark);
 }
-
 .header .header_menu .dropdown .btn-secondary img {
   height: 100%;
   width: 100%;
   border-radius: 50%;
 }
-
 .header .header_menu .dropdown .btn-secondary.notify_btn {
   position: relative;
   height: 4rem;
   width: 4rem;
   min-width: 4rem;
 }
-
 .header .header_menu .dropdown .btn-secondary.notify_btn:before {
   content: "";
   position: absolute;
@@ -111,55 +90,44 @@
   border-radius: 50%;
   background-color: var(--color_primary);
 }
-
 @media screen and (max-width: 991px) {
   .header .header_menu .dropdown .btn-secondary {
     height: 3.4rem;
     width: 3.4rem;
   }
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu {
   border: 1px solid var(--border_color);
   border-radius: 1rem;
   max-width: 35rem;
   min-width: 35rem;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu h4 {
   font-size: 1.6rem;
   font-weight: 600;
   color: var(--color_dark);
   padding: 1rem;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu ul {
   margin: 0;
   max-height: 30rem;
   padding: 1rem;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu ul li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: relative;
   cursor: pointer;
   padding: 0.8rem;
   border-radius: 0.6rem;
   margin-top: 1.2rem;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu ul li img.notify_avtar {
   height: 3.5rem;
   width: 3.5rem;
   border-radius: 50%;
   margin-right: 1rem;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu ul li span.notify {
   max-width: calc(100% - 5rem);
   display: block;
@@ -167,13 +135,11 @@
   color: var(--color_dark);
   padding-right: 1.5rem;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu ul li button.remove_notify {
   position: absolute;
   top: 50%;
   right: 0.6rem;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   min-width: 2.6rem;
   width: 2.6rem;
   height: 2.6rem;
@@ -181,22 +147,14 @@
   padding: 0.5rem;
   background-color: transparent;
   color: var(--color_dark);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .header .header_menu .dropdown.notification .dropdown-menu ul li button.remove_notify svg {
   height: 2rem;
   width: 2rem;
 }
-
 @media screen and (max-width: 991px) {
   .header .header_menu .dropdown.notification .dropdown-menu {
     height: 100vh;
@@ -207,11 +165,9 @@
     left: 0 !important;
     right: auto !important;
     position: fixed !important;
-    -webkit-transform: translate(0) !important;
-            transform: translate(0) !important;
+    transform: translate(0) !important;
   }
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu {
   border: 1px solid var(--border_color);
   border-radius: 1rem;
@@ -219,75 +175,56 @@
   min-width: 35rem;
   padding: 1rem;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu h5.userMenu_title {
   font-size: 1.6rem;
   font-weight: 600;
   color: var(--color_dark);
   padding: 1rem;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu .user_account {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 1.5rem 0;
   margin-bottom: 1.5rem;
   border-bottom: 1px solid var(--border_color);
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu .user_account .user_img {
   height: 7rem;
   width: 7rem;
   border-radius: 50%;
   display: block;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu .user_account .user_name {
   display: block;
   width: calc(100% - 10rem);
   padding-left: 1rem;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu .user_account .user_name h5 {
   font-size: 1.6rem;
   color: var(--color_dark);
   font-weight: 500;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu .user_account .user_name p {
   font-size: 1.3rem;
   color: var(--color_secondary);
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu ul li.menu_link {
   margin-top: 1rem;
   border-radius: 0.8rem;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu ul li.menu_link:hover {
   background-color: var(--color_lightprimary);
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu ul li.menu_link:hover svg {
   background-color: transparent;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu ul li.menu_link a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   font-size: 1.4rem;
   color: var(--color_dark);
   text-transform: capitalize;
 }
-
 .header .header_menu .dropdown.user_menu .dropdown-menu ul li.menu_link a svg {
   background-color: var(--color_lightprimary);
   padding: 0.8rem;
@@ -297,7 +234,6 @@
   color: var(--color_primary);
   margin-right: 0.8rem;
 }
-
 @media screen and (max-width: 991px) {
   .header .header_menu .dropdown.user_menu .dropdown-menu {
     height: 100vh;
@@ -307,8 +243,7 @@
     top: 0 !important;
     left: 0 !important;
     right: auto !important;
-    -webkit-transform: translate(0) !important;
-            transform: translate(0) !important;
+    transform: translate(0) !important;
     position: fixed !important;
   }
 }
@@ -324,15 +259,12 @@ button.boost_menuClose {
   color: var(--color_primary);
   display: none;
 }
-
 button.boost_menuClose svg {
   height: 100%;
   width: 100%;
 }
-
 @media screen and (max-width: 991px) {
   button.boost_menuClose {
     display: block;
   }
-}
-/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=header.css.map */
